--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.11.8",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -39,5 +41,11 @@
     "prettier": "2.8.4",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "npx prettier --write .",
+      "npx eslint . --fix --ext .js,.jsx,.ts,.tsx"
+    ]
   }
 }
