--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "vite": "^3.2.3"
   },
   "lint-staged": {
-    "src/**/*": [
-      "npx prettier --write .",
-      "npx eslint . --fix --ext .js,.jsx,.ts,.tsx"
-    ]
+    "src/**/*.{js,tsx,ts,tsx,css,html}": "npx prettier --write",
+    "src/**/*.{js,ts,tsx,jsx}": "npx eslint"
   }
 }
