--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "vite": "^3.2.3"
   },
   "lint-staged": {
-    "src/**/*.{js,tsx,ts,tsx,css,html,scss}": "prettier --write",
-    "src/**/*.{js,tsx,ts,tsx}": "eslint --fix"
+    "src/**/*.{js,tsx,ts,tsx}": ["prettier --write", "eslint --fix"],
+    "src/**/*.{css,scss}": "prettier --write"
   }
 }
