--- a/package.json
+++ b/package.json
@@ -42,10 +42,14 @@
     "husky": "^8.0.0",
     "prettier": "2.8.4",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "lint-staged": {
-    "src/**/*.{js,tsx,ts,tsx}": ["prettier --write", "eslint --fix"],
+    "src/**/*.{js,tsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
     "src/**/*.{css,scss}": "prettier --write"
   }
 }
