--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.0",
     "prettier": "2.8.4",
+    "sass": "^1.58.3",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
     "vite-plugin-eslint": "^1.8.1"
